# NeuralNetworkSandbox

./: CMakeLists.txt  LICENSE.md  README.md
data/: GenerateTrainingData.py  trainingData.txt
src/: main.cpp
src/Net/: Net.cpp  Net.h
src/Neuron/: Neuron.cpp  Neuron.h
src/TrainingData/: TrainingData.cpp  TrainingData.h
src/TrainingDataHandler/: TrainingDataHandler.cpp  TrainingDataHandler.h
